# inter

./: Cargo.toml  README.md
examples/: rounding.rs  sinus.rs
src/: interval.rs  lib.rs  rounding.rs  utils.rs
